# prompt-format-direction

./: README.md  abliteration.py  deformatization.py  evaluate.py  finetune.py  format_utils.py  main.py  plot.py  pyproject.toml  pytorch_llm_utils.py  tests.py
scripts/: finetune.sh  run.sh  run_ensemble.sh  run_lora.sh  score.sh
