[project]
name = "prompt-format-direction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
    "setuptools>=80.8.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.2",
    "wheel>=0.45.1",
]
